--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
     
               <div class="front">
                 <img
-                  src="./assets/cloudpoint1.png"
+                  src="./assets/CloudPoint1.png"
                   alt="Front-image"
                   class="front-img"
                 />
