--- a/index.html
+++ b/index.html
@@ -228,11 +228,20 @@
       <h1 class="title">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container">
-          <img
-            src="./assets/mypic.png"
-            alt="Profile picture"
-            class="about-pic"
-          />
+
+          <div class="Card">
+            <div class="Card-inner">
+
+              <div class="Card-front">
+              </div>
+
+              <div class="Card-back">
+              </div>
+
+            </div>
+            
+          </div>
+
         </div>
         <div class="about-details-container">
           <div class="about-containers">
@@ -783,6 +792,7 @@
     <div class="codepen">
       <a href="https://codepen.io/meet-shah-the-sasster">My CodePen Project</a>
     </div>
+<!-- **************************** Media Project -->
 
     <br /><br /><br /><br /><br />
 
